force-app/main/default/objects/Account/fields/Adoptions_Count__c.field-meta.xml
<CustomField>
    <fullName>Adoptions_Count__c</fullName>
    <label>Adoptions Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>