force-app/main/default/objects/Account/fields/Animal_Count__c.field-meta.xml
<CustomField>
    <fullName>Animal_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Animal Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>