force-app/main/default/objects/Account/fields/Delivery_Costs__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Costs__c</fullName>
    <label>Delivery Costs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>