force-app/main/default/objects/Account/fields/Delivery_Times__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Times__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Times</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>