force-app/main/default/objects/Account/fields/Minimum_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Amount__c</fullName>
    <label>Minimum Order Amount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>