force-app/main/default/objects/Account/fields/Unadopted_Virtually_Count__c.field-meta.xml
<CustomField>
    <fullName>Unadopted_Virtually_Count__c</fullName>
    <description>Number of animals that are not adopted virtually</description>
    <label>Unadopted Virtually Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>